<resources>
    <string name="app_name">Tortichino</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kremasti1">Fina Katarina</string>
    <string name="kremasti2">Dvobojni kolač od lješnjaka</string>
    <string name="kremasti3">Napolitana</string>
    <string name="kremasti4">Havana</string>
    <string name="kremasti5">Boem kolač</string>
    <string name="kremasti6">Bijela sreća</string>
    <string name="kremasti7">Pita od čokolade</string>
    <string name="kremasti8">Trostruki užitak</string>
    <string name="kremasti9">Bounty kolač</string>
    <string name="kremasti10">Lambada</string>
    <string name="kremasti11">Tiramisu</string>
    <string name="kremasti12">Šareni kolačić</string>
    <string name="kremasti13">Narančina brda</string>
    <string name="kremasti14">Japanska pita</string>
    <string name="kremasti15">Čoko Loko</string>
    <string name="kremasti16">Kockice od kokosa</string>
    <string name="kremasti18">Pita s makom</string>
    <string name="kremasti17">Kokos kocke</string>
    <string name="kremasti19">Mačji jezik</string>
    <string name="kremasti20">Kolač sa kokosom i makom</string>
    <string name="kremasti21">Cimet kolačići</string>
    <string name="kremasti22">Jon pita</string>
    <string name="kremasti24">Cappuccino šnite</string>
    <string name="kremasti26">Narančine šnite</string>
    <string name="kremasti25">Kocke od oraha</string>
    <string name="kremasti27">Rumena rolada</string>
    <string name="kremasti28">Čudo od čokolade</string>
    <string name="kremasti29">Munchmallow kolač</string>
    <string name="fila">Fila:</string>
    <string name="_1_tijesto">1. tijesto:</string>
    <string name="_2_tijesto">2. tijesto:</string>
    <string name="priprema">Priprema:</string>
    <string name="krema">Krema:</string>
    <string name="sastojci">Sastojci:</string>
    <string name="biskvit">Biskvit:</string>
    <string name="preljev_za_biskvit">Preljev za biskvit:</string>
    <string name="grans">Granš:</string>
    <string name="postupak">Postupak:</string>
    <string name="sastojci_za_4_kore">Sastojci za 4 kore:</string>
    <string name="glazura">Glazura:</string>
    <string name="nadjev">Nadjev:</string>
    <string name="zuta_krema">Žuta krema:</string>
    <string name="bijela_krema">Bijela krema:</string>
    <string name="ukrasavanje">Ukrašavanje:</string>
    <string name="fila_mak">Fila mak:</string>
    <string name="fila_kokos">Fila kokos:</string>
    <string name="medusloj">Međusloj:</string>
    <string name="slaganje">Slaganje:</string>
    <string name="_1_dio">1. dio:</string>
    <string name="_2_dio">2. dio:</string>
    <string name="_3_dio">3. dio:</string>
    <string name="kremasti23">Bijela limun bajadera</string>
    <string name="beze">Beze:</string>
    <string name="_1_krema">1. krema:</string>
    <string name="_2_krema">2. krema:</string>
    <string name="nepeceni_kolaci">Nepečeni kolači</string>
    <string name="nepeceni2">Jaffa kuglice</string>
    <string name="nepeceni1">Čoko-Koko</string>
    <string name="nepeceni3">Kornfleks šnite</string>
    <string name="nepeceni4">Kuglice sreće</string>
    <string name="nepeceni5">Raffaello kuglice</string>
    <string name="nepeceni6">Ferrero Rocher kuglice</string>
    <string name="nepeceni8">Šarene loptice</string>
    <string name="nepeceni7">Loli pops</string>
    <string name="nepeceni9">Kinder</string>
    <string name="nepeceni10">Pustinjski poljubac</string>
    <string name="bijela_smjesa">Bijela smjesa:</string>
    <string name="smeda_smjesa">Smeđa smjesa:</string>
    <string name="punjenje">Punjenje:</string>
    <string name="dodatno">Dodatno:</string>
    <string name="trad1">Kuglof od sira</string>
    <string name="trad2">Mađarica</string>
    <string name="trad3">Kuglof - Crnac</string>
    <string name="trad4">Rezine s makom</string>
    <string name="trad6">Orehnjača</string>
    <string name="trad7">Čupavci</string>
    <string name="trad8">Mramorni jogurt kolač</string>
    <string name="trad9">Posipanka od domačih jabuka</string>
    <string name="trad10">Djedov brk</string>
    <string name="trad11">Pita od višanja</string>
    <string name="trad12">Starinska zlevanka</string>
    <string name="trad13">Pita od jogurta</string>
    <string name="trad15">Londoneri</string>
    <string name="trad16">Kosekove oči</string>
    <string name="trad18">Mramorni</string>
    <string name="trad19">Medena pita</string>
    <string name="trad5">Pita od jabuka</string>
    <string name="trad14">Bazlamača</string>
    <string name="trad17">Štrudla od šljiva</string>
    <string name="tijesto">Tijesto:</string>
    <string name="preljev">Preljev:</string>
    <string name="posip">Posip:</string>
    <string name="sitni1">Šape sa bučinim brašnom</string>
    <string name="sitni2">Bijele prhke mašnice</string>
    <string name="sitni4">Čajni</string>
    <string name="sitni3">Čoko krašotice</string>
    <string name="sitni5">Brze kiflice</string>
    <string name="sitni6">Gljive</string>
    <string name="sitni7">Raspukanci</string>
    <string name="sitni8">Roščići od bučinih koštica</string>
    <string name="sitni10">Okruglice od jabuka</string>
    <string name="sitni11">Cornfleksi</string>
    <string name="sitni12">Kifli bez jaja</string>
    <string name="sitni13">Prkači</string>
    <string name="sitni14">Dizane kiflice</string>
    <string name="sitni15">Domaći keksi</string>
    <string name="sitni16">Išleri</string>
    <string name="sitni17">Kolačići s limunom</string>
    <string name="sitni19">Vanilin vjenčići</string>
    <string name="sitni9">Fino i zdravo keksi</string>
    <string name="sitni20">Crno bijele kifle</string>
    <string name="sitni21">Salenjaci</string>
    <string name="sitni22">Krašuljci</string>
    <string name="sitni23">Školjkice</string>
    <string name="sitni24">Medenjaci</string>
    <string name="sitni25">Kiflice od oraha</string>
    <string name="sitni18">Medeni poljupci</string>
    <string name="secerni_sirup">Šečerni sirup:</string>
    <string name="slani1">Bučnica</string>
    <string name="slani2">Pogačice od sira i grožđica</string>
    <string name="slani7">Starinski kifli od tikvinih koštica</string>
    <string name="slani6">Kiflice</string>
    <string name="slani5">Kukuruzna zlevanka</string>
    <string name="slani4">Kolač od paradajza</string>
    <string name="slani3">Gibanica</string>
    <string name="za_premazivanje">Za premazivanje:</string>
    <string name="naziv_recepta">naziv recepta</string>
    <string name="unesite_naziv_recepta">Unesite naziv recepta</string>
    <string name="torta1">Torta od bučinih koštica</string>
    <string name="torta2">Vege torta bez glutena</string>
    <string name="torta3">Torta od maka i čokolade</string>
    <string name="torta5">Čoko-Rum torta</string>
    <string name="torta6">Panj</string>
    <string name="torta7">Choko orange hypnotic cake</string>
    <string name="torta8">Čoko San</string>
    <string name="torta9">\'Samo malo\' torta</string>
    <string name="torta10">Matematika za 2. razred</string>
    <string name="torta11">Zdrava torta</string>
    <string name="torta12">Brza torta s jagodama</string>
    <string name="torta13">Torta sa bademima i lješnjacima</string>
    <string name="torta14">Čokoladna torta - Lopta</string>
    <string name="torta15">Torta a \'la Palace</string>
    <string name="torta16">Vrhovi Velebita</string>
    <string name="krem1_desc1">Kuhaj na pari 6 žumanjaka sa 15 dkg šećera i 1 vanili šećer. U ohlađeno dodati 25 dkg putra i 15 dkg šećera u prahu.</string>
    <string name="krem1_desc2">Miješaj 7 žumanjaka sa 7 žlica šećera, dodaj 7 žlica mljevenih oraha,4 žlice brašna, malo prška za pecivo i snjeg od bjelanjaka. Peci u većoj tepsiji.</string>
    <string name="krem1_desc3">Od 6 bjelanjaka izlupati čvrst snjeg, dodati 6 žlica mljevenog šećera, 15 dkg mljevenih oraha, 15 dkg grožđica,4 žlice bršna, 1 vanili šećer, malo praška za pecivo. Peci u tepsiji iste veličine.</string>
    <string name="krem1_desc4">1 tijesto – fila – 2 tijesto – fila – 1 tijesto.</string>
    <string name="krem2_desc1">8 bjelanjaka, 30 dkg šećera, 25 dkg lješnjaka</string>
    <string name="krem2_desc2">4 jaja,5 žlica šećra, 5 žlica brašna, 2 žlice kakaa, 2 žlice čokolade u prahu</string>
    <string name="krem2_desc3">8 žumanjaka, 10 žlica šećera, 3 žlice škrobnog brašna, 1 dcl jake crne kave, 25 dkg margarina</string>
    <string name="krem2_desc4">Lješnjake popržiti i samljeti, istući snjeg od bjelanjaka, dodati šećer i na kraju lješnjake - peći u dvije kore.</string>
    <string name="krem2_desc5">Izmješati žutanjke sa šećerom, dodati brašno, kakao, čokoladu u prahu i snjeg od bjelanjaka.</string>
    <string name="kem2_desc6">Izmješati žutanjke sa šećerom, umješati brašno i kavu – skuhati kremu na pari, u ohlađeno dodati margarin.</string>
    <string name="krem3_desc1">2 jaja, 80 g šećera, 200 g glatkog brašna, 1 žličica praška za pecivo, 200 ml mlijeka, 100 ml ulja, 100 g oraha, korica naranče, 1 žlica ruma</string>
    <string name="krem3_desc2">100 ml toplog mlijeka, 1 žlica ruma</string>
    <string name="kre3_desc3">160 g tamne čokolade, 300 ml vrhnja za šlag, 100 g napolitanki – ponoviti 2 puta</string>
    <string name="krem3_desc4">600 ml mlijeka, 2 žumanjka, 30 g vanili šećera, 70 g gustina, 70 g čokolade za kuhanje, 1 žlica soka naranče, 5 ml ruma, 200 ml vrhnja za šlag</string>
    <string name="krem3_desc5">Odvojiti žumanjke od bjelanjaka, izlupati snjeg, preostale sastojke za biskvit izmiksati i žlicom umeteti snjeg. Peći na 180°c. oko 30 minuta.</string>
    <string name="krem3_desc6">Zagrijati mlijeko pritom malo odvojiti i pomiješati sa žumanjcima i gustinom – skuhati poput pudinga. Kad je skuhana podijeliti na dva dijela i u 1 dio staviti čokoladu i rum, a u 2 dio staviti sok od naranče. Umutiti šlag i podjeliti u kreme.</string>
    <string name="krem3_desc7">Rastopiti čokoladu u slatkom vrhnju dodati narezane napolitanke.</string>
    <string name="krem3_desc8">biskvit – granš – krema – granš – šlag</string>
    <string name="krem4_desc1">3 jaja, 3 žlice šećera, 3 žlice brašna, prašak za pecivo</string>
    <string name="krem4_desc2">½ l mlijeka, ½ l slatkog vrhnja, 15 dkg šećera, 2 želatine u prahu, 15 dkg lješnjaka, 15 dkg napolitanki</string>
    <string name="krem4_desc3">Ugrijati pećnicu na 160°c. Zamutiti jaja, šećer, prašak za pecivo i brašno. Staviti u kalup i peći 15 minuta. Ugrijati mlijeko sa šećerom i rashladiti. Slupati ćvrst šlag. U mlijeko dodati lješnjake i napolitanke. Želatinu napraviti po uputi na vrećici. Dodati u mlijeko. Izmiksati šlag i umetnuti. Na ohlađeni biskvit izliti kremu – ostaviti da se kolač stisne i ohladi.</string>
    <string name="krem5_desc1">10 bjelanjaka, 15 žlica šećera, 4 žlice brašna, 4 žlice kakaa, 200 g mljevenih oraha</string>
    <string name="krem5_desc2">150 g crne čokolade, 6 žlica ulja, 2 žlice mlijeka</string>
    <string name="krem5_desc3">500 ml mlijeka, 10 žlica šećera, 10 žumanjaka, 4 žlice brašna, vanili šećer po želji, 200 g maslaca ili margarina</string>
    <string name="krem5_desc4">Ulupati po 5 bjelanjaka sa 5 žlica šećera da se dobije jaka pjena, dodati 2 žlice kakaa, 100 g mljevenih oraha i 2 žlice brašna, sve lagano sjediniti i istresti u obloženi veliki pleh od rola i peći u prethodno zagrijanoj pećnici na 200°c. kada stavite peći koru smanjite na 180°c. peći između 15 – 20 minuta. Pećena oba biskvita ohladiti i prerezati po pola (po dužini ili širini) da se dobiju dvije manje kore i tako dobijete 4 kore velićine pola velike tepsije. Umutiti mlijeko, šećer, žumanjke, vanili šećer i brašno i staviti na laganu vatru. Kad se ohladi staviti margarin. Između korica ide po 1/3 kreme, a na zadnju glazura od čokolade i možete posipati orasima. Ostaviti par sati da odstoji pa poslužite.</string>
</resources>