<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NepeceniFragment"
    android:orientation="vertical"
    android:background="@color/darkWhite">


    <include android:id="@+id/actionbar_nepeceni"
        layout="@layout/actionbar_nepeceni" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvNepeceni1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:src="@drawable/nepeceni1" />

            <TextView
                android:id="@+id/tvNepeceni1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nepeceni1"
                android:textAlignment="center"
                android:textColor="@color/Brown"
                android:textSize="22sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvNepeceni2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_cardview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:src="@drawable/nepeceni2" />

            <TextView
                android:id="@+id/tvNepeceni2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nepeceni2"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/Brown"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvNepeceni3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_cardview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:src="@drawable/nepeceni3" />

            <TextView
                android:id="@+id/tvNepeceni3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nepeceni3"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/Brown"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvNepeceni4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_cardview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:src="@drawable/nepeceni4" />

            <TextView
                android:id="@+id/tvNepeceni4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nepeceni4"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/Brown"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvNepeceni5"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_cardview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:src="@drawable/nepeceni5" />

            <TextView
                android:id="@+id/tvNepeceni5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nepeceni5"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/Brown"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvNepeceni6"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_cardview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:src="@drawable/nepeceni6" />

            <TextView
                android:id="@+id/tvNepeceni6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nepeceni6"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/Brown"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvNepeceni7"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_cardview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:src="@drawable/nepeceni7" />

            <TextView
                android:id="@+id/tvNepeceni7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nepeceni7"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/Brown"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvNepeceni8"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_cardview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:src="@drawable/nepeceni8" />

            <TextView
                android:id="@+id/tvNepeceni8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nepeceni8"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/Brown"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvNepeceni9"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_cardview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:src="@drawable/nepeceni9" />

            <TextView
                android:id="@+id/tvNepeceni9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nepeceni9"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/Brown"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cvNepeceni10"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_cardview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:src="@drawable/nepeceni10" />

            <TextView
                android:id="@+id/tvNepeceni10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nepeceni10"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/Brown"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
</ScrollView>